<resources>
    <string name="app_name">Stock Management</string>
    <string name="home_page">Home</string>
    <string name="sort_filter">Sort/Filter</string>
    <string name="name">Name</string>
    <string name="label_end"> : </string>
    <string name="created_date">Created Date</string>
    <string name="none">None</string>
    <string name="zero">0</string>
    <string name="date_sample">00–00–0000</string>
    <string name="clear">Clear</string>
    <string name="rs_0">Rs. 0</string>
    <string name="purchase">Create a New Purchase</string>
    <string name="sale">Create a New Sale</string>
    <string name="product">Create a New Product</string>
    <string name="customer">Create a New Customer</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="id">ID</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="popup_save">Save</string>
    <string name="popup_cancel">Cancel</string>
    <string name="popup_save_new">Save and New</string>
    <string name="popup_apply">Apply</string>
    <string name="popup_title">Confirm Action</string>
    <string name="tab_product">Product Stats</string>
    <string name="tab_create_record">Create a New Record</string>
    <string name="tab_record_list">See Records List</string>
    <string name="filter_popup_Enter_Here">Enter Here</string>
    <string name="confirmation">Confirmation</string>
    <string name="unsaved_changes_exit">Are you sure you want to go back? Unsaved changes will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="record_count">Record Count :</string>
    <string name="delete_record">Delete Record</string>
    <string name="module_Question">Select the module Name to delete the record</string>
    <string name="title_delete_record">Enter the Record ID to Delete</string>
    <string name="hint_delete_record">Enter the Record ID Number</string>
    <string name="delete_but_proceed">Proceed</string>
    <string name="delete_but_delete">Delete</string>
    <string name="stock_price_update">Stock Price Update</string>
    <string name="price_update_page">Purchase Record Price Update Page</string>
    <string name="title_update_record">Enter the Purchase Record ID to Update Price</string>
    <string name="hint_update_record">Enter the Record ID Number</string>
    <string name="title_update_price">Enter the new price of the Stock (Rs)</string>
    <string name="hint_update_price">Enter the amount here</string>
    <string name="update_button">Update</string>
    <string name="error_uppage_record_notfound">For given Record ID record not found or invalid record id was given</string>
    <string name="error_uppage_record_not_applicable">For the given Record ID, there is no product in stock</string>
    <string name="error_new_invalid_price">Enter the Correct Price of the Product</string>
    <string name="price_updated">Price was updated</string>
    <string name="mod_none">Select Module</string>
    <string name="mod_customer">Customer</string>
    <string name="mod_product">Product</string>
    <string name="mod_purchase">Purchase</string>
    <string name="mod_sale">Sale</string>
    <string name="mod_selection_alert">Select the Module to Enter Record Id</string>
    <string name="mod_record_id_alert">Record ID Required</string>
    <string name="customer_delete_blocked">There are sales entries for this customer. Cannot delete.</string>
    <string name="product_delete_blocked">There are purchase entries for this product. Cannot delete.</string>
    <string name="purchase_delete_blocked">There are sales entries for this purchase Id. Cannot delete.</string>
    <string name="sale_delete_blocked">This Sale entry is created before 2 Days. Cannot delete.</string>
    <string name="customer_not_found_error">Customer not found</string>
    <string name="product_not_found">Product not found</string>
    <string name="purchase_not_found">Purchase not found</string>
    <string name="sale_not_found">Sale not found</string>
    <string name="label_customer_id">Customer ID: </string>
    <string name="label_customer_name">Name: </string>
    <string name="label_customer_phone">Phone: </string>
    <string name="label_customer_address">Address: </string>
    <string name="label_product_id">Product ID: </string>
    <string name="label_product_name">Name: </string>
    <string name="label_purchase_id">Purchase ID: </string>
    <string name="label_purchase_product">Product: </string>
    <string name="label_purchase_qty">Quantity: </string>
    <string name="label_sale_id">Sale ID: </string>
    <string name="label_sale_customer">Customer: </string>
    <string name="label_sale_product">Product: </string>
    <string name="label_sale_qty">Product Count: </string>
    <string name="label_sale_amount">Amount Given: Rs.</string>
    <string name="deleted_success">record deleted.</string>
    <string name="import_data">Import Data</string>
    <string name="import_data_from_zip">Import Data from ZIP</string>
    <string name="backup_page">Backup Page</string>
    <string name="enter_the_password_to_backup">Enter the password to Backup:-</string>
    <string name="entre_here">Entre Here…</string>
    <string name="proceed">Proceed</string>
    <string name="click_to_backup">Click to Backup:-</string>
    <string name="backup">Backup</string>
    <string name="imports">Import</string>
    <string name="import_no_file">No File Selected</string>
    <string name="import_no_file_error">Please choose a valid ZIP file</string>
    <string name="import_invalid_file">Invalid File</string>
    <string name="import_invalid_file_error">Please select a ZIP file</string>
    <string name="import_title_error">Error</string>
    <string name="import_unable_to_read">Unable to read the selected file</string>
    <string name="import_Failed_to_import">Failed to import ZIP</string>
    <string name="import_success">Data imported successfully!</string>
    <string name="backup_success">Manual backup successful!</string>
    <string name="backup_failed">Manual backup failed!</string>
    <string name="dash_product_name">Product Name</string>
    <string name="dash_available_unit_s">Available Unit(s)</string>
    <string name="dash_sales_this_month">Sales This Month</string>
    <string name="customer_phone_no">Phone No</string>
    <string name="customer_address">Address</string>
    <string name="customer_address_hint">Enter Address of Customer</string>
    <string name="customer_phone_no_hint">Enter Customer Contact Number</string>
    <string name="customer_name_hint">Enter the Customer Name</string>
    <string name="customer_creation">Customer Creation</string>
    <string name="save_customer">Save Customer</string>
    <string name="customer_editing">Customer Editing</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_balance">Balance</string>
    <string name="edit_the_customer_details">Edit the Customer Details</string>
    <string name="customers_sale_record">See Sales Entry For this Customer</string>
    <string name="customer_list">Customer List</string>
    <string name="customer_same_name_alert">Already we have a Customer with Same Name so Change
        Customer name</string>
    <string name="customer_name_required">Customer name is required</string>
    <string name="customer_name_length">Customer name should be more than 4 letters</string>
    <string name="customer_address_required">Address is required</string>
    <string name="customer_phone_required">Phone number is required</string>
    <string name="customer_phone_length">Phone number is not proper</string>
    <string name="customer_saved">Customer record Saved</string>
    <string name="customer_save_conformation">Are you sure you want to save this customer details?</string>
    <string name="customer_update_conformation">Are you sure you want to update this customer
        details?</string>
    <string name="customer_not_found">Customer name not Found in Records</string>
    <string name="customer_updated">Customer record updated</string>
    <string name="filter_customer_none">None</string>
    <string name="filter_customer_balance">Balance</string>
    <string name="filter_customer_name_asc">Name ASC</string>
    <string name="filter_customer_name_desc">Name DESC</string>
    <string name="filter_customer_name">Customer Name</string>
    <string name="filter_customer_phone_number">Phone Number</string>
    <string name="filter_customer_popup_enter_name">Enter Customer Name</string>
    <string name="filter_customer_popup_enter_phone">Enter Phone Number</string>
    <string name="filter_customer_popup_entered_customer">Entered Name</string>
    <string name="filter_customer_popup_entered_phone">Entered Phone No.</string>
    <string name="filter_customer_popup_phone_validation">Enter Phone Number more than 2 digit</string>
    <string name="filter_result_customer">Customer Record Not Found</string>
    <string name="product_measurement_unit">Measurement Unit</string>
    <string name="product_started_date">Started Date</string>
    <string name="product_name_hint">Enter the Product Name</string>
    <string name="save_product">Save Product</string>
    <string name="product_creation">Product Creation</string>
    <string name="product_editing">Product Editing</string>
    <string name="sample_product_name">Product Name</string>
    <string name="product_list">Product List</string>
    <string name="product_details">Product Details</string>
    <string name="product_id">Product ID</string>
    <string name="product_stock_count">Stock Unit(s)</string>
    <string name="product_latest_price">Latest Price</string>
    <string name="edit_the_product_details">Edit the Product Details</string>
    <string name="product_sale_record">See Sales Entry For this Product</string>
    <string name="product_mes_none">None</string>
    <string name="product_same_name_alert">Already we have a Product with the Same Name so Change
       Product name</string>
    <string name="product_name_required">Product Name Required</string>
    <string name="product_mes_required">Measurement unit is required</string>
    <string name="product_start_date_required">Product start Date is required</string>
    <string name="product_saved">Product record Saved</string>
    <string name="product_save_conformation">Are you sure you want to save this Product
        details?</string>
    <string name="product_update_conformation">Are you sure you want to update this Product
        details?</string>
    <string name="product_price">Product Price (Rs.)</string>
    <string name="product_price_hint">Enter the Price of One Product</string>
    <string name="product_not_found_error">Product not found</string>
    <string name="product_updated">Product is Updated</string>
    <string name="product_update_price_error">Please enter a valid price</string>
    <string name="filter_Product_none">None</string>
    <string name="filter_Product_name_asc">Name ASC</string>
    <string name="filter_product_name_desc">Name DESC</string>
    <string name="product_name">Product Name</string>
    <string name="purchase_id">Purchase ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="sale_product_count">Product Unit(s)</string>
    <string name="sale_amount_only">Amount Only</string>
    <string name="sale_details">Sale Details</string>
    <string name="sale_id">Sale ID</string>
    <string name="sale_total_cost">Total Cost</string>
    <string name="sale_amount_given">Amount Given</string>
    <string name="sale_amount_only_status">false</string>
    <string name="product_list_latest_stock_cost">Latest Stock Cost</string>
    <string name="product_list_stock_count">Stock Unit(s)</string>
    <string name="language">Language</string>
</resources>