<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/menu_icon"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_backup"
                android:title="@string/backup"
                android:icon="@drawable/backup_icon"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_import"
                android:title="@string/imports"
                android:icon="@drawable/import_icon"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_language"
                android:title="@string/language"
                android:icon="@drawable/language_icon"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_delete"
                android:title="@string/delete_record"
                android:icon="@drawable/delete_icon"
                app:showAsAction="ifRoom" />

        </menu>
    </item>
</menu>
