<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".products.ProductView"
    android:padding="10dp"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/product_details"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:gravity="center">
        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center" >
            <TableRow>
                <TextView
                    android:text="@string/product_id"
                    android:textSize="16sp"/>
                <TextView
                    android:text="@string/label_end"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/TV_ProductID"
                    android:layout_height="50sp"
                    android:layout_width="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/name"
                    android:textSize="16sp"/>
                <TextView
                    android:text="@string/label_end"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/TV_ProductName"
                    android:layout_height="50sp"
                    android:layout_width="wrap_content"
                    android:text="@string/none"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/product_measurement_unit"
                    android:textSize="16sp"/>
                <TextView
                    android:text="@string/label_end"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/TV_ProductMeasureunit"
                    android:layout_height="50sp"
                    android:layout_width="wrap_content"
                    android:text="@string/none"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/product_stock_count"
                    android:textSize="16sp"/>
                <TextView
                    android:text="@string/label_end"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/TV_ProductCount"
                    android:layout_height="50sp"
                    android:layout_width="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginBottom="10dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/product_latest_price"
                    android:textSize="16sp"/>
                <TextView
                    android:text="@string/label_end"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/TV_ProductPrice"
                    android:layout_height="50sp"
                    android:layout_width="wrap_content"
                    android:text="@string/rs_0"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginBottom="10dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/created_date"
                    android:textSize="16sp"/>
                <TextView
                    android:text="@string/label_end"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/TV_ProductCreDate"
                    android:layout_height="50sp"
                    android:layout_width="wrap_content"
                    android:text="@string/date_sample"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
            </TableRow>
            <Button
                android:id="@+id/Btn_EditProduct"
                android:layout_width="wrap_content"
                android:text="@string/edit_the_product_details"
                tools:ignore="VisualLintButtonSize" />
        </TableLayout>
    </LinearLayout>
</LinearLayout>