<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ManualBackuppage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/backup_page"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/TV_PasswordHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_the_password_to_backup"
        android:textColor="@color/green"
        android:textSize="22sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/ET_Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/entre_here"
        tools:ignore="VisualLintTextFieldSize" />
    <Button
        android:id="@+id/Btn_CheckPassword"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"/>

    <TextView
        android:id="@+id/TV_BackupHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/click_to_backup"
        android:textColor="@color/green"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Btn_Backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/backup"
        android:textColor="@color/white" />
</LinearLayout>
